--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,9 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.7.9",
+    "cron-parser": "^4.9.0",
     "form-data": "^4.0.1",
+    "humanize-duration": "^3.32.1",
     "node-cron": "^3.0.3"
   },
   "devDependencies": {
