--- a/client/package.json
+++ b/client/package.json
@@ -2,9 +2,9 @@
   "name": "client",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/client.js",
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "nodemon src/client.js"
   },
   "keywords": [],
   "author": "",
