--- a/server/package.json
+++ b/server/package.json
@@ -2,9 +2,9 @@
   "name": "server",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/server.js",
   "scripts": {
-    "start": "nodemon index.js",
+    "start": "nodemon src/server.js",
     "up": "docker compose up --build -d",
     "down": "docker compose down",
     "restart": "docker compose down && docker compose up --build -d"
@@ -14,7 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.21.2",
-    "multer": "1.4.5-lts.1",
+    "multiparty": "^4.2.3",
     "nodemailer": "^6.10.0"
   },
   "devDependencies": {
