--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -4,6 +4,7 @@ RUN npm i -g pnpm
 COPY package.json ./
 COPY pnpm-lock.yaml ./
 RUN pnpm install
-COPY *.js ./
+RUN mkdir -p /app/src
+COPY ./src/ /app/src/
 EXPOSE 3000
-CMD ["node", "index.js"]
+CMD ["node", "./src/server.js"]
